2002-09-03  Simon Josefsson  <jas@extundo.com>

	* nntp.el (nntp-wait-for-string): Dont infloop if process died.

	* gnus-agent.el (gnus-agent-batch): Add doc.

2002-09-03  Josh Huber <huber@alum.wpi.edu>

	* gnus-msg.el (gnus-summary-handle-replysign): Change the order we
	check for signed and encrypted parts.
	* mml.el (mml-parse-1): Correct small typo which preventing
	setting recipients in a secure tag.

2002-09-03  Katsumi Yamaoka <yamaoka@jpl.org>

	* mm-util.el (mm-coding-system-priorities): Default to a list of
	iso-2022-jp and others for the Japanese environment.

2002-09-03  Katsumi Yamaoka <yamaoka@jpl.org>

	* gnus-util.el (gnus-frame-or-window-display-name): Exclude
	invalid display names.

2002-08-30  Simon Josefsson  <jas@extundo.com>

	* gnus-group.el (gnus-group-fetch-control): Fix typo in last
	commit.  From Reiner Steib <4uce.02.r.steib@gmx.net>.

2002-08-26  Jesper harder  <harder@ifa.au.dk>

	* gnus.el (gnus-group-charter-alist): New option.
	(gnus-group-fetch-control-use-browse-url): New option.

	* gnus-group.el (gnus-group-fetch-charter): New function.
	(gnus-group-fetch-control): New function.
	Add them to the keymap and menu. Require mm-url.

2002-08-30  Katsumi Yamaoka <yamaoka@jpl.org>

	* gnus-mlspl.el (gnus-group-split-fancy): Doc fix.
	From Alex Schroeder <alex@emacswiki.org>.

2002-08-29  Jesper harder  <harder@ifa.au.dk>

	* gnus-group.el (gnus-group-make-menu-bar): Add ellipses to menu
	items expecting user interaction.

	* gnus-topic.el (gnus-topic-make-menu-bar): do.

	* gnus-sum.el (gnus-summary-make-menu-bar): do.

	* gnus-srvr.el (gnus-server-make-menu-bar): do.

	* mml.el (mml-menu): do.

2002-08-28  Katsumi Yamaoka <yamaoka@jpl.org>

	* mail-source.el (mail-source-touch-pop): New function.

	* message.el (message-smtpmail-send-it): New function.
	(message-send-mail-function): Add it for a candidate.

2002-08-27  Simon Josefsson  <jas@extundo.com>

	* gnus-msg.el (posting-charset-alist): Use